##########################################################################
#                                                                        #
# Copyright (C) 2021 by Tidop Research Group                             #
# Copyright (C) 2021 by Esteban Ruiz de Oña Crespo                       #
#                                                                        #
# This file is part of TidopLib                                          #
#                                                                        #
# TidopLib is free software: you can redistribute it and/or modify       #
# it under the terms of the GNU Lesser General Public License as         #
# published by the Free Software Foundation, either version 3 of the     #
# License, or (at your option) any later version.                        #
#                                                                        #
# TidopLib is distributed in the hope that it will be useful,            #
# but WITHOUT ANY WARRANTY; without even the implied warranty of         #
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the          #
# GNU Lesser General Public License for more details.                    #
#                                                                        #
# You should have received a copy of the GNU Lesser General Public       #
# License along with TidopLib. If not, see <http://www.gnu.org/licenses>.#
#                                                                        #
# @license LGPL-3.0 <https://www.gnu.org/licenses/lgpl-3.0.html>         #
#                                                                        #
##########################################################################

# Test modulo featmatch

if(TL_HAVE_FEAT_MATCH)

add_subdirectory(agast)
add_subdirectory(akaze)
add_subdirectory(boost)
add_subdirectory(brief)
add_subdirectory(brisk)
add_subdirectory(daisy)
add_subdirectory(evaluation)
add_subdirectory(fast)
add_subdirectory(freak)
add_subdirectory(gftt)
add_subdirectory(hog)
add_subdirectory(kaze)
add_subdirectory(latch)
add_subdirectory(lucid)
add_subdirectory(mser)
add_subdirectory(orb)
add_subdirectory(sift)
add_subdirectory(star)
add_subdirectory(surf)
add_subdirectory(vgg)
endif()
